fix(side-bar): Add line height to list items for better wrapping.

--- a/source/style/_doc/navigation.scss
+++ b/source/style/_doc/navigation.scss
@@ -213,6 +213,13 @@
 
     a {
       color: inherit;
+      display: inline-box;
+
+        span {
+          display: inline-block;
+          line-height: 20px;
+          margin: 5px 0px;
+        }
     }
   }
 
